--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -360,6 +360,7 @@
     <ClInclude Include="functions\SO_fn_Items.h" />
     <ClInclude Include="functions\SO_fn_Misc.h" />
     <ClInclude Include="functions\SO_fn_Settings.h" />
+    <ClInclude Include="functions\SO_fn_Topics.h" />
     <ClInclude Include="MenuHooks.h" />
     <ClInclude Include="MiscHooks.h" />
     <ClInclude Include="internal\containers.h" />
