CornerMessageHooks -> fix conflict with Tweaks

--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -321,6 +321,7 @@
     <ClCompile Include="internal\memory_pool.cpp" />
     <ClCompile Include="internal\StewieMagic.cpp" />
     <ClCompile Include="internal\utility.cpp" />
+    <ClCompile Include="settings.cpp" />
     <ClCompile Include="ShowOffNVSE.cpp" />
   </ItemGroup>
   <ItemGroup>
