--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -309,6 +309,7 @@
     <ClCompile Include="..\nvse\GameTasks.cpp" />
     <ClCompile Include="..\nvse\GameTiles.cpp" />
     <ClCompile Include="..\nvse\GameTypes.cpp" />
+    <ClCompile Include="..\nvse\NiTypes.cpp" />
     <ClCompile Include="..\nvse\SafeWrite.cpp" />
     <ClCompile Include="..\nvse\Utilities.cpp" />
     <ClCompile Include="Events\LambdaVarContext.cpp" />
@@ -341,6 +342,7 @@
     <ClInclude Include="..\nvse\GameTiles.h" />
     <ClInclude Include="..\nvse\GameTypes.h" />
     <ClInclude Include="..\nvse\GameUI.h" />
+    <ClInclude Include="..\nvse\NiTypes.h" />
     <ClInclude Include="..\nvse\ParamInfos.h" />
     <ClInclude Include="..\nvse\PluginAPI.h" />
     <ClInclude Include="..\nvse\SafeWrite.h" />
