--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj.filters
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj.filters
@@ -2031,6 +2031,9 @@
     <ClInclude Include="easing.h">
       <Filter>internal</Filter>
     </ClInclude>
+    <ClInclude Include="NVSEParamInfos.h">
+      <Filter>nvse</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="exports.def" />
