add OnCalculateEffectEntryMagnitude, IsOutsideMainThread

--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -316,6 +316,7 @@
     <ClCompile Include="functions\SO_fn_Files.cpp" />
     <ClCompile Include="GameUI.cpp" />
     <ClCompile Include="internal\ExtractArgs_TypeSafe.cpp" />
+    <ClCompile Include="internal\SOTypes.cpp" />
     <ClCompile Include="MenuHooks.cpp" />
     <ClCompile Include="MiscHooks.cpp" />
     <ClCompile Include="internal\containers.cpp" />
