--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -316,6 +316,7 @@ copy "$(SolutionDir)Release\$(TargetName).pdb" "$(FalloutNVPath)\Data\NVSE\Plugi
     <ClCompile Include="Events\LambdaVarContext.cpp" />
     <ClCompile Include="functions\SO_fn_Files.cpp" />
     <ClCompile Include="GameUI.cpp" />
+    <ClCompile Include="internal\AuxTimers.cpp" />
     <ClCompile Include="internal\ExtractArgs_TypeSafe.cpp" />
     <ClCompile Include="internal\SOTypes.cpp" />
     <ClCompile Include="MenuHooks.cpp" />
