--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,12 @@ ASALocalRun/
 *.lib
 common/Debug VC9/common_vc9.idb
 common/Debug VC9/common_vc9.lib
+common/Debug VC9/common_vc9.idb
+common/Debug VC9/common_vc9.lib
+*.tlog
+*.lastbuildstate
+*.lib
+*.tlog
+*.lastbuildstate
+*.idb
+*.lib
