add ForceRecoilAnim, ForceHitStaggerReaction

--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -304,6 +304,7 @@ copy "$(SolutionDir)Release\$(TargetName).pdb" "$(FalloutNVPath)\Data\NVSE\Plugi
     <ClCompile Include="..\nvse\GameForms.cpp" />
     <ClCompile Include="..\nvse\GameObjects.cpp" />
     <ClCompile Include="..\nvse\GameOSDepend.cpp" />
+    <ClCompile Include="..\nvse\GameProcess.cpp" />
     <ClCompile Include="..\nvse\GameRTTI.cpp" />
     <ClCompile Include="..\nvse\GameScript.cpp" />
     <ClCompile Include="..\nvse\GameSettings.cpp" />
