--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj.filters
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj.filters
@@ -108,7 +108,9 @@
     <ClCompile Include="Events\CustomEventFilters.cpp">
       <Filter>Events</Filter>
     </ClCompile>
-    <ClCompile Include="..\nvse\GameProcess.cpp" />
+    <ClCompile Include="..\nvse\GameProcess.cpp">
+      <Filter>nvse</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="functions\SO_fn_Misc.h">
